# enterprise-knowledge-rag

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  docker-compose.yml  linxi_company_knowledge.md
backend/: README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  answer.py  documents.py  search.py
backend/app/core/: __init__.py  config.py  error_handlers.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  document.py
backend/app/schemas/: __init__.py  answer.py  document.py  search.py
backend/app/services/: __init__.py  answering.py  document_indexing.py  document_jobs.py  document_parser.py  embedding.py  retrieval.py  text_splitter.py
backend/app/workers/: __init__.py  document_indexing.py
backend/evaluation/: rag_cases.json
backend/migrations/: README.md  env.py  script.py.mako
backend/migrations/versions/: 20260711_001_create_document_tables.py  20260715_002_add_chunk_page_number.py
backend/scripts/: __init__.py  check_embedding.py  evaluate_rag.py  run_document_worker.py
backend/tests/: test_answering.py  test_critical_failures.py  test_document_indexing.py  test_document_jobs.py  test_document_list.py  test_document_parser.py  test_document_preview.py  test_embedding.py  test_error_handling.py  test_health.py  test_models.py  test_rag_evaluation.py  test_retrieval.py  test_text_splitter.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
question/: INTERVIEW_QA.md
(+17 files in other folders)
